--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -11,6 +11,7 @@
     display: flex
     align-items: center
     +roboto-bold
+    font-size: 1.8rem
     color: #2a16a7
     letter-spacing: 0.105rem
     // < 992px
@@ -20,6 +21,7 @@
     +sm
       align-items: center
       margin-top: 2.5rem
+      font-size: 1.6rem
     &__link
       display: flex
       align-items: center
@@ -36,8 +38,8 @@
         margin-right: 0
     &__icon
       max-width: 100%
-      width:  2.8rem
-      height: 2.8rem
+      width:  1.5em
+      height: 1.5em
       margin-right: 1rem
 
 .logo
