--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -40,6 +40,21 @@ a
     padding: 0 7.5px
     width: 100%
 
+.btn
+  background: linear-gradient(#6ade4b, #10ae50)
+  border: none
+  padding: 2.5rem 6rem
+  +roboto-bold
+  color: white
+  letter-spacing: .1rem
+  cursor: pointer
+  transition: .3s ease
+  &:hover
+    background: linear-gradient(lighten(#6ade4b, 5), lighten(#10ae50, 5))
+    box-shadow: 0 0 7px rgba(0, 0, 0, .4)
+    //
+
+
 html
   font-size: 10px
 
