--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -4,6 +4,7 @@
   left: 0
   top: 0
   width: 100%
+  color: #300d49
   &-wrap
     padding: 1.8rem 0
     display: flex
@@ -17,8 +18,7 @@
     align-items: center
     +roboto-bold
     font-size: 1.8rem
-    color: #2a16a7
-    letter-spacing: 0.105rem
+    letter-spacing: 0.02rem
     // < 992px
     +md
       flex-direction: column
@@ -45,15 +45,15 @@
       max-width: 100%
       width:  1.5em
       height: 1.5em
+      margin-top: .1rem
       margin-right: 1rem
 
 .logo
   display: inline-block
   text-align: center
   +oswald
-  color: #300d49
-  font-size: 1.4rem
+  font-size: 1.6rem
   letter-spacing: -.02rem
   &__company-name
     display: block
-    font-size: 1.8rem
+    font-size: 1.4em
