--- a/sass/sections/_home.sass
+++ b/sass/sections/_home.sass
@@ -11,7 +11,7 @@
     top:  0
     width:  100%
     height: 100%
-    background: rgba(#f0eff7, .55)
+    background: rgba(#f0eff7, .45)
   +lg
     background-position: 56% bottom
     background-size: 150rem
@@ -38,22 +38,28 @@
     font-size: 1.8rem
     +md
       font-size: 1.7rem
+    +sm
+      font-size: 1.3rem
+      margin: 13rem 0
     &__title
       margin: 0 0 1rem
       color: #15081e
       font-size: 3em
       strong
-        color: #aa151b
+        color: #c62828
         +sm
           display: block
     &__subtitle
       display: inline-block
-      padding: .2rem 1rem
-      background-color: #beb9e1
+      padding: .2rem 1rem .6rem
+      background-color: darken(#bf8cf2, 5)
       color: #fefefe
       font-size: 2.3em
       font-weight: bold
+      line-height: 1.2
       letter-spacing: 2.4px
     &__btn
       display: block
       margin: 5rem auto 0
+      +sm
+        margin-top: 3rem
